--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "node-hello",
+  "name": "node-aws-connect",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/johnpapa/node-hello.git"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/johnpapa/node-hello/issues"
-  },
-  "homepage": "https://github.com/johnpapa/node-hello#readme"
+  "dependencies": {
+    "aws-sdk": "^2.912.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
+  }
 }
